# New Features
* Collect mask and ipProtocol for virtual servers